2000-08-20  Kriston J. Rehberg  <Kriston@AOL.NET>

	* nsftp, nspostgres, nssolid, nssybpd moved to $TOP level.

2000-08-17  Jim Davidson

	* nsd/dbtcl: Removed unused variables in GetCsvCmd.
	
	* nsd/adp.c: Fixed bug of not truncating output buffer when an
	error was thrown during an ns_adp_parse.  Fix suggested by Rob
	Mayoff.

	* tcl7.6 and tcl8.2.3: Switched to blocking Tcl_WaitPid to avoid
	zombies as suggested by Rob Mayoff.
	
	* thread: NULL out thread arg at exit to avoid Ns_ThreadEnum
	checking arg info for possibly deallocated context as seen in
	ns_info threads.  Also, moved read of firstPtr in Ns_ThreadEnum
	inside lock.
	
2000-08-17  Kriston J. Rehberg  <Kriston@AOL.NET>
	
	* nssock/sock.c (SockThread): warning sent to log when Server Busy
	is returned.

	* All the Makefiles should be in line with each other.  Typing
	"gmake", "gmake install" and "gmake clean" should work in any
	directory.  NSHOME is paid attention to by all Makefiles.

	* nsd: Ns_Log and Ns_Fatal statements are hopefully more
	standardized and more useful to admins and developers.

	* Irix now builds as -o32 using the native compiler by default.
	See Makefile.global on how to change.

2000-08-15  Kriston J. Rehberg  <Kriston@AOL.NET>

	* include/Makefile.global (INSTLOG): should have pointed to
	$(INST)/lib, not $(INST)/modules/lib.

	* Makefile: nsunix resurrected.  All modules are built.  If a
	module is missing a library, it is not built, but it won't stop
	the AOLserver build process (no error is thrown).  The build will
	continue with the next module.
	
	* nsftp: guesses if you have TCP_WRAPPERS available.

	* nsext: Ten guesses why $(NSHOME)/include/nsextmsg.h was
	duplicated here.

	* nssybpd: Hopefully, the log statements will be easier to
	understand by both admins and developers.  It's still messy since
	it uses syslog.  Makefile redone to use standard AOLserver rules.
	RPATH is used a little more intelligently.  Removed files that had
	no business living there.
	